# wwsim

./: .gitignore  Cargo.toml  README.md  log.md
data/: countries.json  country_data.csv  gamestate.json  log.csv  targets.json
data/000000/: gamestate.json
data/000001/: gamestate.json  post.json  save.json
data/000002/: gamestate.json  post.json  save.json
data/000003/: gamestate.json  post.json  save.json
data/000004/: gamestate.json  post.json  save.json
data/000005/: gamestate.json  post.json  save.json
data/000006/: gamestate.json  post.json  save.json
data/000007/: gamestate.json  post.json  save.json
data/000008/: gamestate.json  post.json  save.json
data/000009/: gamestate.json  post.json  save.json
data/000010/: gamestate.json  post.json  save.json
data/000011/: gamestate.json  post.json  save.json
data/000012/: gamestate.json  post.json  save.json
data/000013/: post.json  (+2 more)
logs/: log.txt  log_000000.md  log_000001.md  log_000002.md  log_000003.md  log_000004.md  log_000005.md  log_000006.md  log_000007.md  log_000008.md  log_000009.md  log_000010.md  log_000011.md  log_000012.md  log_000013.md  log_000014.md  log_000015.md  log_000016.md  log_000017.md  log_000018.md  log_000019.md  log_000020.md  log_000021.md  log_000022.md  log_000023.md  log_000024.md  log_000025.md  log_000026.md  log_000027.md  log_000028.md  log_000029.md  log_000030.md  log_000031.md  log_000032.md  log_000033.md  log_000034.md  log_000035.md  log_000036.md  log_000037.md  log_000038.md  (+103 more)
src/: game_utils.rs  gamestate_reader.rs  main.rs  scraper.rs  utils.rs
(+391 files in other folders)
