[package]
name = "wwsim"
version = "0.2.0"
authors = ["agubelu <agustinbd3@gmail.com>", "escalonn <nicholas.escalona@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rayon = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
counter = "0.4.3"
ureq = { version = "3", features = ["json"] }
chrono = "0.4.44"
indicatif = "0.17"
plotters = "0.3"
opener = "0.8"
